Update landing page carousel hover states

--- a/src/components/index-page/Creators/style.scss
+++ b/src/components/index-page/Creators/style.scss
@@ -146,6 +146,7 @@
 
       &:hover {
         background-color: rgba(187, 217, 246, .13);
+        border: 1px solid rgba(203, 224, 241, .27);
       }
 
       &__channel {
