--- a/src/components/index-page/JoystreamDAO/style.scss
+++ b/src/components/index-page/JoystreamDAO/style.scss
@@ -90,7 +90,8 @@
       max-width: 1440px;
       min-height: 288px;
       margin: 0 auto;
-      margin-top: 32px;
+      margin-top: 27px;
+      padding-top: 5px;
       overflow: hidden;
       gap: $carousel-gap;
     }
@@ -115,6 +116,13 @@
       padding: 24px;
       background-color: $c_white;
       border-radius: 8px;
+      transition: all .2s;
+
+      &:hover {
+        background-color: $c_white;
+        transform: translate(-5px, -5px);
+        box-shadow: 8px 8px 0 -2px $c_blue-ribbon;
+      }
 
       &__image {
         width: 40px;
