--- a/src/components/index-page/VideoNFTs/style.scss
+++ b/src/components/index-page/VideoNFTs/style.scss
@@ -205,11 +205,12 @@
       width: 288px;
       height: 374px;
       overflow: hidden;
-      background-color: $c_ebony-clay;
+      background-color: rgba(188, 213, 250, .08);
       border-radius: 8px;
 
       &:hover {
-        background-color: rgba(red(#5c6475), green(#5c6475), blue(#5c6475), 25%);
+        background-color: rgba(187, 217, 246, .13);
+        border: 1px solid rgba(203, 224, 241, .27);
       }
 
       &__image {
