Stop parallax on all landing page items at 1024px breakpoint

--- a/src/components/index-page/Hero/style.scss
+++ b/src/components/index-page/Hero/style.scss
@@ -249,6 +249,11 @@ $animation-name: null;
 
       &__illustration {
         margin-top: 56px;
+
+        & > div {
+          -webkit-transform: none !important;
+          transform: none !important;
+        }
       }
     }
   }
