--- a/src/components/index-page/JoystreamDAO/style.scss
+++ b/src/components/index-page/JoystreamDAO/style.scss
@@ -251,6 +251,11 @@
 
       &__illustration {
         margin-top: 56px;
+
+        & > div {
+          -webkit-transform: none !important;
+          transform: none !important;
+        }
       }
 
       &__carousel-title {
