--- a/src/components/token-page/Wallets/style.scss
+++ b/src/components/token-page/Wallets/style.scss
@@ -67,7 +67,7 @@
     }
 
     &__item {
-      height: 240px;
+      height: 310px;
       padding: 32px;
       cursor: pointer;
       background-color: $c_white;
@@ -86,6 +86,20 @@
         width: 100%;
         height: 100%;
         border-radius: 12px;
+      }
+
+      &__platforms-title {
+        @include section-title-md;
+
+        margin-top: 24px;
+        color: $c_blue-ribbon;
+      }
+
+      &__platforms {
+        @include base-3;
+
+        margin-top: 8px;
+        color: #3b3b3b;
       }
 
       &__name {
@@ -163,11 +177,15 @@
 
       &__item {
         width: 100%;
-        height: 188px;
+        height: 270px;
         max-width: 335px;
 
         &__image-wrapper {
           @include logo-wrapper(48px, 48px);
+        }
+
+        &__platforms {
+          @include base-4;
         }
 
         &__name {
