Fix section title margin in main ecosystem component, fix carousel control in same section

--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -638,6 +638,10 @@
           &__about {
             max-width: 100%;
             padding: 24px 16px;
+
+            &__section-title {
+              margin-top: 40px;
+            }
           }
 
           &__visual {
