--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -233,6 +233,7 @@
         margin: 24px auto 0 auto;
         overflow-x: auto;
         gap: 24px;
+        scrollbar-width: none;
 
         &::-webkit-scrollbar {
           height: 0;
@@ -657,6 +658,8 @@
         &__carousel {
           width: 100%;
           max-width: 736px;
+          margin-top: 16px;
+          gap: 16px;
         }
       }
 
@@ -693,9 +696,11 @@
         &__steps {
           justify-content: unset;
           margin-top: 0;
+          margin-top: 56px;
           padding: 0 0 2px 0;
           overflow-x: auto;
           gap: 16px;
+          scrollbar-width: none;
 
           &::-webkit-scrollbar {
             height: 0;
@@ -782,6 +787,8 @@
         margin-top: 64px;
 
         &__main {
+          gap: 48px;
+
           &__about {
             &__title {
               @include h500;
@@ -888,6 +895,12 @@
 
       &__developers {
         &__main {
+          &__about {
+            &__title {
+              @include h400;
+            }
+          }
+
           &__visual {
             &__code {
               &__broken-line {
