--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -112,12 +112,11 @@
 
     &__apps {
       margin-top: 120px;
-      grid-column: 1 / 13;
+      grid-column: 2 / 12;
 
       &__title {
         @include h500;
 
-        width: 1142px;
         margin: 0 auto;
         color: $c_white;
 
@@ -135,7 +134,6 @@
 
       &__main {
         display: flex;
-        width: 1142px;
         height: 592px;
         margin: 32px auto 0 auto;
         overflow: hidden;
@@ -229,7 +227,6 @@
 
       &__carousel {
         display: flex;
-        width: 1142px;
         margin: 24px auto 0 auto;
         overflow-x: auto;
         gap: 24px;
@@ -519,6 +516,12 @@
     }
   }
 
+  @media (min-width: 1440px) {
+    &__ecosystem {
+      max-width: calc(1440px - 64px);
+    }
+  }
+
   @media (max-width: 1440px) {
     &__ecosystem {
       &__header {
@@ -536,12 +539,9 @@
       }
 
       &__apps {
-        &__title {
-          width: 960px;
-        }
+        grid-column: 1 / 13;
 
         &__main {
-          width: 960px;
           height: 552px;
 
           &__about {
@@ -549,17 +549,16 @@
           }
 
           &__visual {
+            width: 100%;
             padding: 48px 0 0 48px;
             overflow: hidden;
 
             &__image {
+              width: 100%;
+              height: auto;
               min-width: 720px;
             }
           }
-        }
-
-        &__carousel {
-          width: 960px;
         }
       }
 
@@ -626,7 +625,6 @@
           @include h400;
 
           width: 100%;
-          max-width: 736px;
         }
 
         &__main {
@@ -634,7 +632,6 @@
           flex-direction: column;
           width: 100%;
           height: 832px;
-          max-width: 736px;
 
           &__about {
             max-width: 100%;
@@ -646,10 +643,10 @@
           }
 
           &__visual {
-            padding: 28px 0 0 24px;
+            padding: 28px 24px 0 24px;
 
             &__image {
-              height: 447px;
+              height: auto;
               min-width: 688px;
             }
           }
@@ -657,7 +654,6 @@
 
         &__carousel {
           width: 100%;
-          max-width: 736px;
           margin-top: 16px;
           gap: 16px;
         }
@@ -775,6 +771,8 @@
           height: 864px;
 
           &__visual {
+            padding-right: 0;
+
             &__image {
               height: 447px;
               min-width: 647px;
