--- a/src/styles/common/_structure.scss
+++ b/src/styles/common/_structure.scss
@@ -1,4 +1,4 @@
-@mixin grid ($column_number: 12) {
+@mixin grid ($column_number: 12, $max-width: calc(1440px - 64px)) {
   display: grid;
   column-gap: 24px;
   grid-template-columns: repeat($column_number, 1fr);
@@ -8,7 +8,8 @@
   }
 
   @media (min-width: 1440px) {
-    max-width: calc(1440px - 64px);
-    margin: 0 auto;
+    max-width: $max-width;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
