--- a/src/components/index-page/CreatorTokens/style.scss
+++ b/src/components/index-page/CreatorTokens/style.scss
@@ -62,7 +62,6 @@
         overflow: hidden;
 
         &__background {
-          // position: absolute;
           width: 100%;
         }
 
@@ -86,7 +85,6 @@
       display: grid;
       margin: 72px auto 0 auto;
       gap: 72px 24px;
-      // max-width: 1142px;
       grid-column: 2 / 12;
       grid-template-columns: 1fr 1fr;
     }
@@ -104,7 +102,6 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        // max-width: 480px;
         padding: 32px 40px 0 40px;
 
         &__section-title {
@@ -261,6 +258,7 @@
       }
 
       &__grid {
+        margin-top: 56px;
         gap: 56px;
       }
 
