--- a/src/components/token-page/Exchanges/style.scss
+++ b/src/components/token-page/Exchanges/style.scss
@@ -59,15 +59,15 @@
     }
 
     &__items {
-      display: flex;
+      display: grid;
       justify-content: center;
       margin-top: 80px;
       gap: 30px;
+      grid-template-columns: repeat(auto-fill, 380px);
     }
 
     &__item {
       position: relative;
-      width: 394px;
       height: 320px;
       padding: 32px;
       cursor: pointer;
