--- a/src/pages/landingpage/style.scss
+++ b/src/pages/landingpage/style.scss
@@ -1,16 +1,17 @@
 @import '../../styles/main';
 
 .landingpage {
-  background-color: black;
   color: white;
+  background-color: black;
+
   & .container-wrapper {
-    margin: auto;
     max-width: 1440px;
+    margin: auto;
   }
 
   & .primary-button {
-    border-radius: 4px;
-    border: 1px solid var(--border-default-muted-alpha, rgba(187, 217, 246, 0.13));
     color: white;
+    border: 1px solid var(--border-default-muted-alpha, rgba(187, 217, 246, .13));
+    border-radius: 4px;
   }
 }
