--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -2,58 +2,62 @@
 
 .header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   padding: 12px 32px;
 
   & a {
-    color: white;
-    gap: 8px;
     display: flex;
     align-items: center;
     padding: 10px 16px;
     font-size: 14px;
     font-weight: 600;
-    letter-spacing: 0.07px;
+    letter-spacing: .07px;
+    color: white;
+    gap: 8px;
   }
+
   & div {
     display: flex;
     align-items: center;
-    gap: 5px;
     font-size: 18px;
     font-weight: 600;
+    gap: 5px;
+
     & img {
       width: 30px;
     }
   }
+
   & button {
-    color: white;
     display: flex;
     align-items: center;
     padding: 8px 16px;
-    gap: 8px;
     font-size: 14px;
     font-weight: 600;
-    letter-spacing: 0.07px;
+    letter-spacing: .07px;
+    color: white;
+    background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
+    border: 1px solid var(--border-default-muted-alpha, rgba(187, 217, 246, .13));
     border-radius: 2px;
-    border: 1px solid var(--border-default-muted-alpha, rgba(187, 217, 246, 0.13));
-    background: var(--background-default-muted-alpha, rgba(188, 213, 250, 0.08));
+    gap: 8px;
   }
 }
 
 .navbarlist {
-  background: var(--background-default-muted-alpha, rgba(188, 213, 250, 0.08));
   display: flex;
-  padding: 8px 32px;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  padding: 8px 32px;
+  background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
   gap: 16px;
+
   & button {
     padding: 8px 10px;
     font-size: 12px;
     font-style: normal;
     font-weight: 500;
     line-height: 16px;
-    letter-spacing: 0.12px;
+    letter-spacing: .12px;
   }
 }
