--- a/src/components/Landingpage/Token/style.scss
+++ b/src/components/Landingpage/Token/style.scss
@@ -321,7 +321,15 @@
     justify-content: space-between;
   }
 
+  .justify-center {
+    justify-content: center;
+  }
+
   .justify-end {
     justify-content: end;
+  }
+
+  .items-center {
+    align-items: center;
   }
 }
